<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CUMPLEAÑOS</string>
    <string name="action_settings">Settings</string>
    <string name="Nombre">NOMBRE</string>
    <string name="Cumpleaños">FESTEJO</string>
    <string name="btInsertar">INSERTAR</string>
    <string name="btVer">VER</string>
    <string name="sqlvista">BASE DE DATOS</string>
    <string name="buscar">BUSCAR</string>
    <string name="edBuscar">BUSCAR</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>

</resources>
